@@ -755,74 +755,22 @@ block|{
 return|return;
 comment|// loaded ok
 block|}
-block|}
-comment|// dictionary based on the current index may need refreshing
-if|if
-condition|(
-name|dictionary
-operator|instanceof
-name|HighFrequencyDictionary
-condition|)
-block|{
-name|reader
-operator|=
-name|reader
+name|LOG
 operator|.
-name|reopen
-argument_list|()
-expr_stmt|;
-name|dictionary
-operator|=
-operator|new
-name|HighFrequencyDictionary
+name|debug
 argument_list|(
-name|reader
-argument_list|,
-name|field
-argument_list|,
-name|threshold
+literal|"load failed, need to build Lookup again"
 argument_list|)
 expr_stmt|;
-try|try
-block|{
-name|lookup
-operator|.
+block|}
+comment|// loading was unsuccessful - build it again
 name|build
 argument_list|(
-name|dictionary
+name|core
+argument_list|,
+name|searcher
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|storeDir
-operator|!=
-literal|null
-condition|)
-block|{
-name|lookup
-operator|.
-name|store
-argument_list|(
-name|storeDir
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-name|e
-argument_list|)
-throw|;
-block|}
-block|}
 block|}
 DECL|method|add
 specifier|public
