@@ -305,6 +305,102 @@ literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='ac']/arr[
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testReload
+specifier|public
+name|void
+name|testReload
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|addDocs
+argument_list|()
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/suggest"
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"ac"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COUNT
+argument_list|,
+literal|"2"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_ONLY_MORE_POPULAR
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='ac']/int[@name='numFound'][.='2']"
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"4"
+argument_list|,
+literal|"text"
+argument_list|,
+literal|"actually"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/suggest"
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"ac"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COUNT
+argument_list|,
+literal|"2"
+argument_list|,
+name|SpellingParams
+operator|.
+name|SPELLCHECK_ONLY_MORE_POPULAR
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='ac']/int[@name='numFound'][.='2']"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|getTFIT
 specifier|private
 name|TermFreqIterator
